--- a/src/style.css
+++ b/src/style.css
@@ -80,7 +80,8 @@ nav h1 {
   list-style: none;
   margin: 0;
   padding: 0;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 2.5rem;
 }
 
 .nav-list a {
@@ -142,7 +143,7 @@ nav h1 {
   text-align: center;
   color: #fff;
   background-color: #D83D00;
-  padding: 1.5rem 2rem;
+  padding: 1rem 2rem;
   border-radius: 1.2rem 1.2rem 0 0;
   margin-right: 1.5rem;
 }
@@ -703,7 +704,7 @@ hr {
 }
 
 .nl-inp-txt {
-  padding: 3rem .5rem;
+  padding: 1.8rem .5rem;
   text-indent: 2rem;
   border-radius: 1rem;
   font-size: 2rem;
@@ -712,9 +713,9 @@ hr {
 
 .nl-inp-sub {
   position: absolute;
-  right: 0;
-  top: 1.2rem;
-  padding: 2rem;
+  right: -.5rem;
+  top: .45rem;
+  padding: 1.6rem;
   min-width: 10rem;
   width: 25%;
   border-radius: 1rem;
@@ -790,3 +791,35 @@ footer{
   top: 12rem;
   left: 4rem;
 }
+
+.mobile-view-mq {
+  display: none;
+}
+
+@media (max-width: 770px) {
+  .top,
+  .body,
+  footer  {
+    display: none;
+  }
+
+  .mobile-view-mq {
+    padding: 2rem;
+    min-height: 100vh;
+    box-sizing: border-box;
+    font-size: 1.1rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .mobile-view-mq > p:first-child {
+    font-style: italic;
+    font-weight: 700;
+    font-size: 2.5rem;
+    color: red;
+  }
+}
+
