--- a/src/style.css
+++ b/src/style.css
@@ -547,6 +547,7 @@ hr {
   flex: 1;
   padding: 1rem 2.5rem;
   background-color: #fff;
+  z-index: 20;
 }
 
 .why-inpt {
@@ -603,6 +604,7 @@ hr {
   margin: 0;
   padding: 0;
   color: #e788635f;
+  z-index: 1;
 }
 
 .tsmny-qute-up {
